# Royal-Search

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: convergence_ga.csv  convergence_hc.csv  logs_genetic.csv  logs_hill_climbing.csv
notebook/: analysis.ipynb
src/: __init__.py  main.py
src/algorithms/: genetic_algorithm.py  hill_climbing.py
src/utils/: board.py  report.py
tests/: test_board.py  test_genetic.py
